--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           efficient way.
         </p>
       </div>
-      <div class="absolute w-80 ml-14 mt-9 top-96 lg:top-80">
+      <div class="absolute lg:w-80 ml-14 mt-9 top-96 lg:top-80">
         <button
           class="bg-sky-400 hover:bg-blue-600 text-white text-xl font-normal py-1 px-5 rounded-md"
         >
@@ -160,7 +160,7 @@
       <span class="font-bold text-3xl">Getting started is </span>
       <span class="font-bold text-3xl text-sky-400">easy</span>
     </div>
-    <div class="flex justify-center max-w-full mt-12 rounded-md">
+    <div class="flex justify-center max-w-full mt-12 rounded-md" id="card01">
       <div
         class="flex flex-wrap lg:justify-end px-6 py-4 border-slate-100 border-2"
       >
@@ -178,21 +178,41 @@
         </div>
       </div>
     </div>
+    <div class="justify-center max-w-full mt-12 rounded-md hidden" id="card02">
+      <div
+        class="flex flex-wrap lg:justify-end px-6 py-4 border-slate-100 border-2"
+      >
+        <img
+          src="./img/Bills.png"
+          alt=""
+          class="h-64 w-72 rounded-md mb-2 mr-8"
+        />
+        <div class="mb-8 lg:w-96">
+          <p class="text-sky-400 text-lg font-semibold mb-2">02</p>
+          <div class="font-bold text-2xl mb-2">Record your bills</div>
+          <p class="lg:text-lg text-base break-word">
+            Effortlessly track and record all your expenses and bills with our
+            user-friendly app.
+          </p>
+        </div>
+      </div>
+    </div>
     <div class="flex justify-center flex-wrap w-full mt-14">
       <div
-        class="max-w-sm px-6 py-4 lg:mr-12 mb-5 lg:mb-0 border-4 border-t-slate-300"
+        id="cardFill"
+        class="max-w-sm px-6 py-4 lg:mr-12 mb-5 lg:mb-0 border-4 border-t-sky-400"
       >
         <div class="mb-4 mt-4"></div>
-        <p class="text-lg font-semibold text-slate-400 mb-2">01</p>
-        <div class="font-bold text-xl mb-2">Fill your Personal Data</div>
+        <p class="text-lg font-semibold mb-2 text-sky-400">01</p>
+        <div class="font-bold text-xl mb-2 text-sky-400">Login or register</div>
         <p class="text-lg">
           Finish your register and complete your personal data.
         </p>
       </div>
-      <div class="max-w-sm px-6 py-4 border-4 border-t-sky-400">
+      <div id="cardRecord" class="max-w-sm px-6 py-4 border-4">
         <div class="mb-4 mt-4"></div>
-        <p class="text-sky-400 text-lg font-semibold mb-2">02</p>
-        <div class="font-bold text-xl text-sky-400 mb-2">Record your bills</div>
+        <p class="text-lg font-semibold mb-2">02</p>
+        <div class="font-bold text-xl mb-2">Record your bills</div>
         <p class="text-lg">
           Effortlessly track and record all your expenses and bills with our
           user-friendly app.
@@ -203,4 +223,5 @@
       <p class="text-lg font-normal mt-1 text-white">© 2023 Bills System</p>
     </div>
   </body>
+  <script src="./index.js"></script>
 </html>
